# ATL_WEBOTS_ROS2_bridge

./: .gitignore  README.md
ros2_ws/: .gitignore  env.bash
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build
ros2_ws/src/cozmo_v1_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/cozmo_v1_bringup/launch/: cozmo_v1.launch.py
ros2_ws/src/webots_interfaces/: CMakeLists.txt
ros2_ws/src/webots_interfaces/msg/: WebotsCozmoController.msg  WebotsThymio2Controller.msg
ros2_ws/src/webots_interfaces/srv/: WebotsCozmoLEDSrv.srv  WebotsCozmoSpeakerSrv.srv  WebotsSimulationSrv.srv
ros2_ws/src/webots_ros2_bridge_py_pkg/: setup.cfg  setup.py
simulation/thymiosuite2/: thymio-challenge-pack-web-bridge.playground
simulation/webots_project/protos/: .CozmoBackWheel.cache  .CozmoBody.cache  .CozmoBotLegacy.cache  .CozmoBotModern.cache  .CozmoFrontWheel.cache  .CozmoHead.cache  .CozmoInterWheelBlock.cache  .CozmoLifter.cache  .CozmoLights.cache  .CozmoLowerLeftArm.cache  .CozmoLowerRightArm.cache  .CozmoLowerShoulder.cache  .CozmoMat.cache  .CozmoMatNonPlane.cache  .CozmoUpperLeftArm.cache  .CozmoUpperRightArm.cache  .CozmoUpperShoulder.cache  .CozmoWorldInfo.cache  .FlatPlate.cache  .HolidayGift.cache
simulation/webots_project/worlds/: .Thymio||.wbproj  .cozmo.wbproj  .cozmo_on_stage.wbproj  .empty.wbproj  .ros_example.wbproj  .thymio-swarm.wbproj  .thymio.wbproj  .thymio2_ball.wbproj  .thymio2_pen.wbproj  CozmoBotModern.wbo  cozmo_on_stage.wbt  empty.wbt  ros_example.wbt  thymio-swarm.wbt  thymio.wbt
(+73 files in other folders)
